--- a/FinalProj.csproj
+++ b/FinalProj.csproj
@@ -192,6 +192,8 @@
     <Content Include="Content\bootstrap-theme.min.css.map" />
     <Content Include="Content\bootstrap-theme.css.map" />
     <Content Include="Account\Web.config" />
+    <Content Include="Admin\Web.config" />
+    <Content Include="Analyst\Web.config" />
     <None Include="Properties\PublishProfiles\FinalProj - Web Deploy.pubxml" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Images\audiA4.jpg" />
